--- a/styles/style.css
+++ b/styles/style.css
@@ -127,7 +127,7 @@ header h1 {
 } */
 
 .hero {
-    height: 500px;
+    height: 450px;
     background: linear-gradient(
       to right,
       hsla(211, 19%, 28%, 0.5),
@@ -182,7 +182,65 @@ header h1 {
     color: #3B4856;
 }
 
+.box-container.tulisan-terbaru {
+    padding-bottom: 50px;
+}
+
 .box-container.subscribe {
+    margin-top: 200px;
+}
+
+.container-items {
+    display: flex;
+    justify-content: space-between;
+    padding: 25px;
+    box-sizing: border-box;
+    margin-top: 30px;
+}
+
+.box-content {
+    width: 31%;
+    background-color: rgba(158, 172, 189, 0.1);
+    border-radius: 5px;
+    padding-bottom: 30px;
+}
+
+.box-container.subscribe .container-items .box-content {
+    background-color: #eefbff00;
+}
+
+.box-content img {
+    padding: 20px;
+    border-radius: 25px;
+    box-sizing: border-box;
+}
+
+.box-content h1 {
+    padding: 10px 20px;
+}
+
+.box-content p {
+    padding: 0 20px 20px;
+    line-height: 25px;
+    box-sizing: border-box;
+}
+
+.box-content a {
+    text-decoration: none;
+    display: block;
+    margin: 20px auto 10px;
+    width: 130px;
+    background-color: #3B4856;
+    padding: 15px 20px;
+    color: #EEFBFF;
+    border-radius: 5px;
+    font-size: 14px;
+    text-align: center;
+}
+
+.box-content a:hover {
+    cursor: pointer;
+    background-color: black;
 }
 
 footer .copyright {
